--- a/bib.bib
+++ b/bib.bib
@@ -159,5 +159,56 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2020Natur.587..387H},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+@ARTICLE{1979ApJ...228..939C,
+       author = {{Cash}, W.},
+        title = "{Parameter estimation in astronomy through application of the likelihood ratio.}",
+      journal = {\apj},
+     keywords = {Astronomical Models, Data Processing, Parameterization, Statistical Analysis, Confidence Limits, Data Sampling, Galactic Clusters, Normal Density Functions, Photons, X Ray Telescopes, Astronomy, Mathematics, Computing, Data Processing},
+         year = 1979,
+        month = mar,
+       volume = {228},
+        pages = {939-947},
+          doi = {10.1086/156922},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1979ApJ...228..939C},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{2012ApJ...756..128F,
+       author = {{Foster}, A.~R. and {Ji}, L. and {Smith}, R.~K. and {Brickhouse}, N.~S.},
+        title = "{Updated Atomic Data and Calculations for X-Ray Spectroscopy}",
+      journal = {\apj},
+     keywords = {atomic data, atomic processes, X-rays: general, Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Instrumentation and Methods for Astrophysics, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2012,
+        month = sep,
+       volume = {756},
+       number = {2},
+          eid = {128},
+        pages = {128},
+          doi = {10.1088/0004-637X/756/2/128},
+archivePrefix = {arXiv},
+       eprint = {1207.0576},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2012ApJ...756..128F},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{2010ApJ...708.1760G,
+       author = {{Getman}, Konstantin V. and {Feigelson}, Eric D. and {Broos}, Patrick S. and {Townsley}, Leisa K. and {Garmire}, Gordon P.},
+        title = "{Methods for Estimating Fluxes and Absorptions of Faint X-ray Sources}",
+      journal = {\apj},
+     keywords = {methods: data analysis, methods: statistical, open clusters and associations: individual: M17, techniques: photometric, X-rays: general, X-rays: stars, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Astrophysics of Galaxies, Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Instrumentation and Methods for Astrophysics},
+         year = 2010,
+        month = jan,
+       volume = {708},
+       number = {2},
+        pages = {1760-1771},
+          doi = {10.1088/0004-637X/708/2/1760},
+archivePrefix = {arXiv},
+       eprint = {0912.0202},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2010ApJ...708.1760G},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 
 
