Updates from Overleaf

--- a/bib.bib
+++ b/bib.bib
@@ -207,8 +207,254 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2010ApJ...708.1760G},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+@ARTICLE{2002ApJ...576L.149R,
+       author = {{Raga}, A.~C. and {Noriega-Crespo}, A. and {Vel{\'a}zquez}, P.~F.},
+        title = "{The X-Ray Luminosities of Herbig-Haro Objects}",
+      journal = {\apjl},
+     keywords = {ISM: Herbig-Haro Objects, ISM: Individual: Alphanumeric: HH 2, ISM: Individual: Alphanumeric: HH 80-81, ISM: Jets and Outflows, ISM: Kinematics and Dynamics, Shock Waves, Astrophysics},
+         year = 2002,
+        month = sep,
+       volume = {576},
+       number = {2},
+        pages = {L149-L152},
+          doi = {10.1086/343760},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0208079},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2002ApJ...576L.149R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 
 
+@ARTICLE{Soker&Tylenda2007,
+       author = {{Soker}, Noam and {Tylenda}, Romuald},
+        title = "{Magnetic activity in stellar merger products}",
+      journal = {\mnras},
+     keywords = {binaries: general, stars: individual: V838 Mon, stars: magnetic fields, supergiants, Astrophysics},
+         year = 2007,
+        month = mar,
+       volume = {375},
+       number = {3},
+        pages = {909-912},
+          doi = {10.1111/j.1365-2966.2006.11351.x},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0609552},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2007MNRAS.375..909S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 
+@ARTICLE{Ivanova+2013,
+       author = {{Ivanova}, N. and {Justham}, S. and {Chen}, X. and {De Marco}, O. and {Fryer}, C.~L. and {Gaburov}, E. and {Ge}, H. and {Glebbeek}, E. and {Han}, Z. and {Li}, X. -D. and {Lu}, G. and {Marsh}, T. and {Podsiadlowski}, P. and {Potter}, A. and {Soker}, N. and {Taam}, R. and {Tauris}, T.~M. and {van den Heuvel}, E.~P.~J. and {Webbink}, R.~F.},
+        title = "{Common envelope evolution: where we stand and how we can move forward}",
+      journal = {\aapr},
+     keywords = {Close binaries, Stellar structure, interiors, evolution, Hydrodynamics, Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2013,
+        month = feb,
+       volume = {21},
+          eid = {59},
+        pages = {59},
+          doi = {10.1007/s00159-013-0059-2},
+archivePrefix = {arXiv},
+       eprint = {1209.4302},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2013A&ARv..21...59I},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Raghavan+2010,
+       author = {{Raghavan}, Deepak and {McAlister}, Harold A. and {Henry}, Todd J. and {Latham}, David W. and {Marcy}, Geoffrey W. and {Mason}, Brian D. and {Gies}, Douglas R. and {White}, Russel J. and {ten Brummelaar}, Theo A.},
+        title = "{A Survey of Stellar Families: Multiplicity of Solar-type Stars}",
+      journal = {\apjs},
+     keywords = {binaries: general, planetary systems, stars: solar-type, stars: statistics, surveys, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2010,
+        month = sep,
+       volume = {190},
+       number = {1},
+        pages = {1-42},
+          doi = {10.1088/0067-0049/190/1/1},
+archivePrefix = {arXiv},
+       eprint = {1007.0414},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2010ApJS..190....1R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Bond+2003,
+       author = {{Bond}, Howard E. and {Henden}, Arne and {Levay}, Zoltan G. and {Panagia}, Nino and {Sparks}, William B. and {Starrfield}, Sumner and {Wagner}, R. Mark and {Corradi}, R.~L.~M. and {Munari}, U.},
+        title = "{An energetic stellar outburst accompanied by circumstellar light echoes}",
+      journal = {\nat},
+     keywords = {Astrophysics},
+         year = 2003,
+        month = mar,
+       volume = {422},
+       number = {6930},
+        pages = {405-408},
+          doi = {10.1038/nature01508},
+archivePrefix = {arXiv},
+       eprint = {astro-ph/0303513},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2003Natur.422..405B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Tylenda+2016,
+       author = {{Tylenda}, R. and {Kami{\'n}ski}, T.},
+        title = "{Evolution of the stellar-merger red nova V1309 Scorpii: Spectral energy distribution analysis}",
+      journal = {\aap},
+     keywords = {circumstellar matter, stars: late-type, stars: individual: V1309 Scorpii, stars: mass-loss, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2016,
+        month = aug,
+       volume = {592},
+          eid = {A134},
+        pages = {A134},
+          doi = {10.1051/0004-6361/201527700},
+archivePrefix = {arXiv},
+       eprint = {1606.09426},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2016A&A...592A.134T},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Schneider+2016,
+       author = {{Schneider}, F.~R.~N. and {Podsiadlowski}, Ph. and {Langer}, N. and {Castro}, N. and {Fossati}, L.},
+        title = "{Rejuvenation of stellar mergers and the origin of magnetic fields in massive stars}",
+      journal = {\mnras},
+     keywords = {binaries: general, blue stragglers, stars: general, stars: individual: {\ensuremath{\tau}} Sco, stars: individual: HR 2949, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2016,
+        month = apr,
+       volume = {457},
+       number = {3},
+        pages = {2355-2365},
+          doi = {10.1093/mnras/stw148},
+archivePrefix = {arXiv},
+       eprint = {1601.05084},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2016MNRAS.457.2355S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Schneider+2020,
+       author = {{Schneider}, F.~R.~N. and {Ohlmann}, S.~T. and {Podsiadlowski}, Ph and {R{\"o}pke}, F.~K. and {Balbus}, S.~A. and {Pakmor}, R.},
+        title = "{Long-term evolution of a magnetic massive merger product}",
+      journal = {\mnras},
+     keywords = {binaries: general, blue stragglers, stars: evolution, stars: individual: {\ensuremath{\tau}} Sco, stars: magnetic field, stars: massive, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - High Energy Astrophysical Phenomena},
+         year = 2020,
+        month = jul,
+       volume = {495},
+       number = {3},
+        pages = {2796-2812},
+          doi = {10.1093/mnras/staa1326},
+archivePrefix = {arXiv},
+       eprint = {2005.05335},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020MNRAS.495.2796S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Donati+2009,
+       author = {{Donati}, J. -F. and {Landstreet}, J.~D.},
+        title = "{Magnetic Fields of Nondegenerate Stars}",
+      journal = {\araa},
+     keywords = {Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Instrumentation and Methods for Astrophysics},
+         year = 2009,
+        month = sep,
+       volume = {47},
+       number = {1},
+        pages = {333-370},
+          doi = {10.1146/annurev-astro-082708-101833},
+archivePrefix = {arXiv},
+       eprint = {0904.1938},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2009ARA&A..47..333D},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Fossati+2015,
+       author = {{Fossati}, L. and {Castro}, N. and {Sch{\"o}ller}, M. and {Hubrig}, S. and {Langer}, N. and {Morel}, T. and {Briquet}, M. and {Herrero}, A. and {Przybilla}, N. and {Sana}, H. and {Schneider}, F.~R.~N. and {de Koter}, A. and {BOB Collaboration}},
+        title = "{B fields in OB stars (BOB): Low-resolution FORS2 spectropolarimetry of the first sample of 50 massive stars}",
+      journal = {\aap},
+     keywords = {stars: magnetic field, stars: early-type, stars: massive, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2015,
+        month = oct,
+       volume = {582},
+          eid = {A45},
+        pages = {A45},
+          doi = {10.1051/0004-6361/201526725},
+archivePrefix = {arXiv},
+       eprint = {1508.00750},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2015A&A...582A..45F},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Grunhut+2017,
+       author = {{Grunhut}, J.~H. and {Wade}, G.~A. and {Neiner}, C. and {Oksala}, M.~E. and {Petit}, V. and {Alecian}, E. and {Bohlender}, D.~A. and {Bouret}, J. -C. and {Henrichs}, H.~F. and {Hussain}, G.~A.~J. and {Kochukhov}, O. and {MiMeS Collaboration}},
+        title = "{The MiMeS survey of Magnetism in Massive Stars: magnetic analysis of the O-type stars}",
+      journal = {\mnras},
+     keywords = {instrumentation: polarimeters, surveys, stars: early-type, stars: magnetic field, stars: massive, stars: rotation, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2017,
+        month = feb,
+       volume = {465},
+       number = {2},
+        pages = {2432-2470},
+          doi = {10.1093/mnras/stw2743},
+archivePrefix = {arXiv},
+       eprint = {1610.07895},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2017MNRAS.465.2432G},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Zuckerman+2008,
+       author = {{Zuckerman}, B. and {Melis}, C. and {Song}, Inseok and {Meier}, David S. and {Perrin}, Marshall D. and {Macintosh}, Bruce and {Marois}, Christian and {Weinberger}, Alycia J. and {Rhee}, Joseph H. and {Graham}, James R. and {Kastner}, Joel H. and {Palmer}, Patrick and {Forveille}, T. and {Becklin}, E.~E. and {Wilner}, D.~J. and {Barman}, T.~S. and {Marcy}, G.~W. and {Bessell}, M.~S.},
+        title = "{Gas and Dust Associated with the Strange, Isolated Star BP Piscium}",
+      journal = {\apj},
+     keywords = {planetary systems: protoplanetary disks, stars: general, Astrophysics},
+         year = 2008,
+        month = aug,
+       volume = {683},
+       number = {2},
+        pages = {1085-1103},
+          doi = {10.1086/587448},
+archivePrefix = {arXiv},
+       eprint = {0802.0226},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2008ApJ...683.1085Z},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Ricker2015,
+       author = {{Ricker}, George R. and {Winn}, Joshua N. and {Vanderspek}, Roland and {Latham}, David W. and {Bakos}, G{\'a}sp{\'a}r {\'A}. and {Bean}, Jacob L. and {Berta-Thompson}, Zachory K. and {Brown}, Timothy M. and {Buchhave}, Lars and {Butler}, Nathaniel R. and {Butler}, R. Paul and {Chaplin}, William J. and {Charbonneau}, David and {Christensen-Dalsgaard}, J{\o}rgen and {Clampin}, Mark and {Deming}, Drake and {Doty}, John and {De Lee}, Nathan and {Dressing}, Courtney and {Dunham}, Edward W. and {Endl}, Michael and {Fressin}, Francois and {Ge}, Jian and {Henning}, Thomas and {Holman}, Matthew J. and {Howard}, Andrew W. and {Ida}, Shigeru and {Jenkins}, Jon M. and {Jernigan}, Garrett and {Johnson}, John Asher and {Kaltenegger}, Lisa and {Kawai}, Nobuyuki and {Kjeldsen}, Hans and {Laughlin}, Gregory and {Levine}, Alan M. and {Lin}, Douglas and {Lissauer}, Jack J. and {MacQueen}, Phillip and {Marcy}, Geoffrey and {McCullough}, Peter R. and {Morton}, Timothy D. and {Narita}, Norio and {Paegert}, Martin and {Palle}, Enric and {Pepe}, Francesco and {Pepper}, Joshua and {Quirrenbach}, Andreas and {Rinehart}, Stephen A. and {Sasselov}, Dimitar and {Sato}, Bun'ei and {Seager}, Sara and {Sozzetti}, Alessandro and {Stassun}, Keivan G. and {Sullivan}, Peter and {Szentgyorgyi}, Andrew and {Torres}, Guillermo and {Udry}, Stephane and {Villasenor}, Joel},
+        title = "{Transiting Exoplanet Survey Satellite (TESS)}",
+      journal = {Journal of Astronomical Telescopes, Instruments, and Systems},
+         year = 2015,
+        month = jan,
+       volume = {1},
+          eid = {014003},
+        pages = {014003},
+          doi = {10.1117/1.JATIS.1.1.014003},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2015JATIS...1a4003R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Stassun2019,
+       author = {{Stassun}, Keivan G. and {Oelkers}, Ryan J. and {Paegert}, Martin and {Torres}, Guillermo and {Pepper}, Joshua and {De Lee}, Nathan and {Collins}, Kevin and {Latham}, David W. and {Muirhead}, Philip S. and {Chittidi}, Jay and {Rojas-Ayala}, B{\'a}rbara and {Fleming}, Scott W. and {Rose}, Mark E. and {Tenenbaum}, Peter and {Ting}, Eric B. and {Kane}, Stephen R. and {Barclay}, Thomas and {Bean}, Jacob L. and {Brassuer}, C.~E. and {Charbonneau}, David and {Ge}, Jian and {Lissauer}, Jack J. and {Mann}, Andrew W. and {McLean}, Brian and {Mullally}, Susan and {Narita}, Norio and {Plavchan}, Peter and {Ricker}, George R. and {Sasselov}, Dimitar and {Seager}, S. and {Sharma}, Sanjib and {Shiao}, Bernie and {Sozzetti}, Alessandro and {Stello}, Dennis and {Vanderspek}, Roland and {Wallace}, Geoff and {Winn}, Joshua N.},
+        title = "{The Revised TESS Input Catalog and Candidate Target List}",
+      journal = {\aj},
+     keywords = {stars: fundamental parameters, Astrophysics - Solar and Stellar Astrophysics, Astrophysics - Earth and Planetary Astrophysics},
+         year = 2019,
+        month = oct,
+       volume = {158},
+       number = {4},
+          eid = {138},
+        pages = {138},
+          doi = {10.3847/1538-3881/ab3467},
+archivePrefix = {arXiv},
+       eprint = {1905.10694},
+ primaryClass = {astro-ph.SR},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019AJ....158..138S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
 
 
